fixed footer on mobile screens and removed margin between eventsList and footer

--- a/components/eventsPage/eventsList/eventsList.module.css
+++ b/components/eventsPage/eventsList/eventsList.module.css
@@ -7,6 +7,7 @@
     align-items: center; /* Ensures everything inside is centered */
     padding-top: 100px;
     padding-bottom: 100px;
+    margin-bottom: -30px;
 }
 
 .filterContainer {
